crates/smart-config/tests/ui/derives/bogus_nested_name.stderr
error[E0080]: evaluation of constant value failed
  --> tests/ui/derives/bogus_nested_name.rs:10:29
   |
10 |     #[config(nest, rename = "what?")]
   |                             ^^^^^^^ the evaluated program panicked at 'Param / config name `what?` is invalid: name contains a disallowed char '?' at position 4; allowed chars are [_a-z0-9]', $DIR/tests/ui/derives/bogus_nested_name.rs:10:29
